--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build -m 'Automatically update gh-pages [skip ci]'"
   },
   "eslintConfig": {
     "extends": [
